# node.ai

./: CMakeLists.txt
imgui/: imgui_vec2_utils.hpp  imnodes.cpp
include/node/: math_nodes.hpp  node.hpp  variable_nodes.hpp
include/ui/: ui.hpp  ui_elements.hpp
src/: main.cpp
src/node/: math_nodes.cpp  node.cpp  variable_nodes.cpp
src/ui/: ui.cpp  ui_elements.cpp
